keda-http-addon/k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-demo
  namespace: keda-demo
  labels:
    app: keda-demo
    pod: keda-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keda-demo
  template:
    metadata:
      labels:
        app: keda-demo
        pod: keda-demo
    spec:
      containers:
        - name: keda-demo
          image: hashicorp/http-echo
          args:
            - "-text=Hello from MyApp KEDA"
            - "-listen=:80"
          ports:
            - containerPort: 80
