keda-http-addon/k8s/02-keda-http-routing-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-http-proxy-alias
  namespace: keda-demo
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080
