keda-http-addon/k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-demo
  namespace: keda-demo
spec:
  selector:
    app: keda-demo
  ports:
    - port: 80
      targetPort: 80
